
    <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
        <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Just Java</string>
        <string name="price">Price</string>
        <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="initial_quantity_value">2</string>
    <string name="order">Order</string>
    <string name="thank_you">Thank You!</string>
    <string name="nice_day">Have a wonderful day!</string>
        <!--
         Name for the order summary. It will be shown in the format of "Name: George" where George is the
         user's name. [CHAR LIMIT=NONE]
         -->
        <string name="order_summary_name">Name: <xliff:g id="name" example="George">George</xliff:g></string>

        <!--
         "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE]
       -->
        <string name="order_summary_whipped_cream">addWhippedCream <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>

        <!--
          Chocolate topping for the order summary. It will be shown in the format of
          "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE]
        -->
        <string name="order_summary_chocolate">Chocolate <xliff:g id="Chocolate" example="true">%b</xliff:g></string>

        <!--
          Quantity of coffee cups for the order summary. It will be shown in the format of
          "Quantity: 2", where 2 is the number of cups ordered. [CHAR LIMIT=NONE]
        -->
        <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g></string>

        <!--
          Total price for the order summary. It will be shown in the format of
          "Total: $10" where $10 is the price. [CHAR LIMIT=NONE]
        -->
        <string name="order_summary_price">Total: <xliff:g id="price" example="$10">%s</xliff:g></string>


        <!--
          Subject line for the order summary email. It will be in the format of
          "Just Java order for George" where George is the user's name. [CHAR LIMIT=NONE]
        -->
        <string name="order_summary_email_subject">Just Java order for <xliff:g id="name" example="George">%s</xliff:g></string>
        <string name="_minus">-</string>
        <string name="_plus">+</string>
        <string name="intial_quantity">2</string>


    </resources>
