<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    
    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/coffee"
            tools:context="com.example.android.justjava.MainActivity" >

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/toppings"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textSize="18sp"
            android:textColor="@color/textColor" />
        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whipped_cream"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:layout_margin="@dimen/activity_horizontal_margin" />
        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:layout_margin="@dimen/activity_horizontal_margin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textSize="18sp"
            android:textColor="@color/textColor_2"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="-"
            android:onClick="decrement"
            android:layout_margin="@dimen/activity_horizontal_margin" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/initial_quantity_value"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textColor="@color/textColor_2" />
        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="+"
            android:onClick="increment"
            android:layout_margin="@dimen/activity_horizontal_margin"  />
        </LinearLayout>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/order"
        android:onClick="submitOrder"
        android:layout_margin="@dimen/activity_horizontal_margin"/>
    </LinearLayout>
    </ScrollView>